--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,25 +10,24 @@
     <EditText
         android:id="@+id/email_sign_up"
         android:layout_width="216dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="67dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="25dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
-        android:layout_marginStart="66dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        android:layout_marginLeft="54dp"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name"/>
 
     <EditText
         android:id="@+id/password_sign_up"
         android:layout_width="215dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="22dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -43,20 +42,20 @@
         android:layout_height="50dp"
         android:layout_marginLeft="49dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="43dp"
         android:text="Sign Up"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.024"
         app:layout_constraintLeft_toLeftOf="@+id/spinner_signup"
         app:layout_constraintRight_toRightOf="@+id/spinner_signup"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_signup"/>
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/upload_file"/>
 
     <EditText
         android:id="@+id/phone"
         android:layout_width="215dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="19dp"
         android:ems="10"
         android:hint="Phone"
         android:inputType="phone"
@@ -69,7 +68,7 @@
         android:id="@+id/spinner_signup"
         android:layout_width="215dp"
         android:layout_height="40dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintTop_toBottomOf="@+id/phone"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/phone"
@@ -80,12 +79,26 @@
     <EditText
         android:id="@+id/name"
         android:layout_width="278dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="33dp"
-        android:layout_marginTop="45dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Name"
+        android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/upload_file"
+        android:layout_width="117dp"
+        android:layout_height="50dp"
+        android:visibility="invisible"
+        android:text="Upload Cv"
+        android:layout_marginRight="48dp"
+        app:layout_constraintRight_toRightOf="@+id/spinner_signup"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/spinner_signup"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_signup"/>
 </android.support.constraint.ConstraintLayout>
