--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.constraint.ConstraintLayout
-
+android:layout_marginTop="?actionBarSize"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.shenawynkov.jopfinder.LoginActivity">
@@ -29,16 +29,16 @@
         android:id="@+id/email_sign_up"
         android:layout_width="215dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="66dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="129dp"
+        android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="32dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"/>
 
     <EditText
         android:id="@+id/password"
@@ -46,7 +46,7 @@
         android:layout_height="40dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="29dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -60,22 +60,22 @@
         android:layout_width="117dp"
         android:layout_height="50dp"
         android:text="Sign in "
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        android:layout_marginLeft="49dp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="@+id/password"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="@+id/password"
-        app:layout_constraintHorizontal_bias="0.097"/>
+        />
 
     <Button
         android:id="@+id/sign_up"
         android:layout_width="117dp"
         android:layout_height="50dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="35dp"
         android:text="Sign Up"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
-        android:layout_marginLeft="-8dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/sign_in_btn"/>
 </android.support.constraint.ConstraintLayout>
 </android.support.design.widget.CoordinatorLayout>
