--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,31 +5,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/my_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-    </android.support.design.widget.AppBarLayout>
 
-    <android.support.constraint.ConstraintLayout
-android:layout_marginTop="?actionBarSize"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+
+    >
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingBottom="4dp"
+        android:layout_weight="0.4"
+        android:scaleType="centerCrop"
+        android:src="@drawable/signin_image"/>
+    <android.support.constraint.ConstraintLayout
+  android:background="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="0.6"
     tools:context="com.example.shenawynkov.jopfinder.LoginActivity">
 
     <EditText
-        android:id="@+id/email_sign_up"
+        android:id="@+id/email_sign_in"
         android:layout_width="215dp"
         android:layout_height="40dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="16dp"
+        android:paddingLeft="8dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
@@ -38,7 +41,8 @@ android:layout_marginTop="?actionBarSize"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"/>
+        android:drawableLeft="@drawable/ic_user"
+        app:layout_constraintHorizontal_bias="0.512"/>
 
     <EditText
         android:id="@+id/password"
@@ -51,14 +55,19 @@ android:layout_marginTop="?actionBarSize"
         android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="@+id/email_sign_up"
-        app:layout_constraintRight_toRightOf="@+id/email_sign_up"
-        app:layout_constraintTop_toBottomOf="@+id/email_sign_up"/>
+        app:layout_constraintLeft_toLeftOf="@+id/email_sign_in"
+        app:layout_constraintRight_toRightOf="@+id/email_sign_in"
+        app:layout_constraintTop_toBottomOf="@+id/email_sign_in"
+        android:drawableLeft="@drawable/ic_padlock"
+        android:paddingLeft="8dp"
+        />
 
     <Button
+        style="@style/text"
+        android:background="@color/colorAccent"
         android:id="@+id/sign_in_btn"
-        android:layout_width="117dp"
-        android:layout_height="50dp"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
         android:text="Sign in "
         android:layout_marginTop="28dp"
         app:layout_constraintTop_toBottomOf="@+id/password"
@@ -69,13 +78,17 @@ android:layout_marginTop="?actionBarSize"
         />
 
     <Button
+        android:background="@color/colorAccent"
+        style="@style/text"
         android:id="@+id/sign_up"
-        android:layout_width="117dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="35dp"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="22dp"
         android:text="Sign Up"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/sign_in_btn"/>
 </android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
