--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-
+<style name="text" parent="@android:style/TextAppearance">
+    <item name="android:textColor">@color/white</item>
+    <item name="android:textSize">16dp</item>
+    <item name="android:textStyle">bold</item>
+</style>
 
 
 
