--- a/app/src/main/res/layout/fragment_new_jop.xml
+++ b/app/src/main/res/layout/fragment_new_jop.xml
@@ -65,7 +65,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:popupBackground="@color/colorAccent"
+        android:popupBackground="@color/white"
 
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"/>
