--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -86,7 +86,7 @@
 />
     <Spinner
         android:layout_marginTop="8dp"
-
+        android:popupBackground="@color/white"
         android:id="@+id/spinner_signup"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
