--- a/app/src/main/res/layout/job_item.xml
+++ b/app/src/main/res/layout/job_item.xml
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
         >
 
@@ -42,7 +42,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Min Salary  : "
+                    android:text="@string/min_salary"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     />
@@ -68,7 +68,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Max Salary  : "
+                    android:text="@string/max_salary"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     />
@@ -94,7 +94,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Carear Level  : "
+                android:text="@string/career_level"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 />
@@ -128,14 +128,14 @@
 
         <Button
             android:id="@+id/apply"
+            style="@style/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginBottom="8dp"
-            android:text="Apply"
-            style="@style/text"
             android:background="@color/colorAccent"
-      />
+            android:text="Apply"
+            />
     </LinearLayout>
 </android.support.v7.widget.CardView>
