--- a/app/src/main/res/layout/jop_widget.xml
+++ b/app/src/main/res/layout/jop_widget.xml
@@ -3,12 +3,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#09C"
-             >
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/widget_list"/>
+    >
 
+    <ListView
+        android:id="@+id/widget_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
 </RelativeLayout>
