--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,94 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
 
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingBottom="4dp"
         android:layout_weight="0.4"
+        android:paddingBottom="4dp"
         android:scaleType="centerCrop"
         android:src="@drawable/signin_image"/>
+
     <android.support.constraint.ConstraintLayout
-  android:background="@color/white"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="0.6"
-    tools:context="com.example.shenawynkov.jopfinder.LoginActivity">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.6"
+        android:background="@color/white"
+        >
 
-    <EditText
-        android:id="@+id/email_sign_in"
-        android:layout_width="215dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="8dp"
-        android:ems="10"
-        android:hint="E-mail"
-        android:inputType="textEmailAddress"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="32dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="32dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:drawableLeft="@drawable/ic_user"
-        app:layout_constraintHorizontal_bias="0.512"/>
+        <EditText
+            android:id="@+id/email_sign_in"
+            app:layout_constraintHorizontal_bias="0.512"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="215dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="16dp"
+            android:drawableLeft="@drawable/ic_user"
+            android:ems="10"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="8dp"/>
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="215dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="29dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="@+id/email_sign_in"
-        app:layout_constraintRight_toRightOf="@+id/email_sign_in"
-        app:layout_constraintTop_toBottomOf="@+id/email_sign_in"
-        android:drawableLeft="@drawable/ic_padlock"
-        android:paddingLeft="8dp"
-        />
+        <EditText
+            android:id="@+id/password"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="@+id/email_sign_in"
+            app:layout_constraintRight_toRightOf="@+id/email_sign_in"
+            app:layout_constraintTop_toBottomOf="@+id/email_sign_in"
+            android:layout_width="215dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="29dp"
+            android:drawableLeft="@drawable/ic_padlock"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="8dp"
+            />
 
-    <Button
-        style="@style/text"
-        android:background="@color/colorAccent"
-        android:id="@+id/sign_in_btn"
-        android:layout_width="215dp"
-        android:layout_height="40dp"
-        android:text="Sign in "
-        android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="@+id/password"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="@+id/password"
-        />
+        <Button
+            android:id="@+id/sign_in_btn"
+            style="@style/text"
+            app:layout_constraintLeft_toLeftOf="@+id/password"
+            app:layout_constraintRight_toRightOf="@+id/password"
+            app:layout_constraintTop_toBottomOf="@+id/password"
+            android:layout_width="215dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="28dp"
+            android:background="@color/colorAccent"
+            android:text="@string/sign_in"
+            />
 
-    <Button
-        android:background="@color/colorAccent"
-        style="@style/text"
-        android:id="@+id/sign_up"
-        android:layout_width="215dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="22dp"
-        android:text="Sign Up"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/sign_in_btn"/>
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/sign_up"
+            style="@style/text"
+            app:layout_constraintLeft_toLeftOf="@+id/sign_in_btn"
+            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
+            android:layout_width="215dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="22dp"
+            android:background="@color/colorAccent"
+            android:text="@string/sign_up"/>
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
